<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校视通</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_flash">FlashActivity</string>
    <string name="title_activity_login">登录账号</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_mynews">MynewsActivity</string>
    <string name="recomm_prefecture_video_erro">视频播放错误，请重试!</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="tab_1">home1111</string>
    <string name="tab_2">home2222</string>
    <string name="sort">欢迎来到分类页面</string>
    <string name="person">欢迎来到个人页面</string>
    <string name="home_1">欢迎来到第一主页页面</string>
    <string name="home_2">欢迎来到第二主页页面</string>
    <string name="title_activity_about_xst">AboutXSTActivity</string>
    <string name="name">用户名:</string>
    <string name="namehint">请输入用户名</string>
    <string name="pwd">密&#160;&#160;&#160;&#160;码:</string>
    <string name="pwdhint">请输入密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="repwd">确认密码:</string>
    <string name="repwdhint">请再次输入密码</string>
    <string name="addtitle">添加记事</string>
    <string name="title">记事的简单描述(标题)</string>
    <string name="content">记事的内容</string>
    <string name="add">添加记事</string>
    <string name="cancle">回主页</string>
    <string name="btnlatest">最新记事</string>
    <string name="btnall">所有轶事</string>
    <string name="show">暂时没有任何记事!</string>
    <string name="time">记事创建日期</string>
    <string name="notitle">记事标题</string>
    <string name="btndelete">删除记事</string>
    <string name="showtime">当前时间</string>
    <string name="title_activity_chinese">ChineseActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_search_player">SearchPlayerActivity</string>

</resources>